WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
321730
[AppKit Gestures] Some events are not fired when event listeners are added to `document`
https://bugs.webkit.org/show_bug.cgi?id=321730
Summary
[AppKit Gestures] Some events are not fired when event listeners are added to...
Richard Robinson
Reported
2026-08-13 15:02:07 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-08-13 15:02:14 PDT
<
rdar://problem/184861414
>
Richard Robinson
Comment 2
2026-08-13 15:04:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/71584
EWS
Comment 3
2026-08-14 10:01:39 PDT
Committed
319177@main
(5919411cb04f): <
https://commits.webkit.org/319177@main
> Reviewed commits have been landed. Closing PR #71584 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug