[AppKit Gestures] Some events are not fired when event listeners are added to `document` https://bugs.webkit.org/show_bug.cgi?id=321730 rdar://184861414

Reviewed by Abrar Rahman Protyasha.

Fix some logic to be agnostic across Cocoa platforms.

Test: Tools/TestWebKitAPI/Tests/WebKit/WebPage/AppKit Gesture Tests/BasicAppKitGesturesTests.swift

* Source/WebCore/dom/Node.cpp:
(WebCore::Node::willRespondToMouseMoveEvents const):
(WebCore::Node::willRespondToMouseClickEventsWithEditability const):
* Tools/TestWebKitAPI/Helpers/cocoa/JavaScriptMessages.swift:
(InstallEventLog.expression):
(InstallEventLog.encoded):
* Tools/TestWebKitAPI/Helpers/cocoa/JavaScriptTypes.swift:
(DOMElement.encoded):
* Tools/TestWebKitAPI/Tests/WebKit/WebPage/AppKit Gesture Tests/BasicAppKitGesturesTests.swift:
(AppKitGesturesTests.singleClickFiresPointerMouseAndClickEvents(_:)):
(AppKitGesturesTests.singleClickFiresEventsForListenersOnTheDocument):

Canonical link: https://commits.webkit.org/319177@main