Tools/TestWebKitAPI/Helpers/cocoa/JavaScriptMessages.swift
@@ -270,13 +270,20 @@ extension JavaScriptMessages {
         public static var expression: String {
             """
             window.eventLog = [];
-            const target = document.getElementById(elementID);
+
+            var target = null;
+            if (element.kind === "id") {
+                target = document.getElementById(element.value);
+            } else if (element.kind === "document") {
+                target = document;
+            }
+
             for (const type of eventTypes)
                 target.addEventListener(type, event => window.eventLog.push({ "type": event.type, "detail": event.detail }));
             """
         }
 
-        private let elementID: String
+        private let element: DOMElement
         private let eventTypes: [String]
 
         /// Creates an expression that records the given event types fired on an element.
@@ -285,7 +292,16 @@ extension JavaScriptMessages {
         ///   - elementID: The `id` attribute of the element to observe.
         ///   - eventTypes: The event types to record.
         public init(in elementID: String, for eventTypes: [DOMEventType]) {
-            self.elementID = elementID
+            self.init(in: .id(elementID), for: eventTypes)
+        }
+
+        /// Creates an expression that records the given event types fired on an element.
+        ///
+        /// - Parameters:
+        ///   - element: The `id` attribute of the element to observe.
+        ///   - eventTypes: The event types to record.
+        public init(in element: DOMElement, for eventTypes: [DOMEventType]) {
+            self.element = element
             self.eventTypes = eventTypes.map(\.rawValue)
         }
 
@@ -293,7 +309,7 @@ extension JavaScriptMessages {
         // swift-format-ignore: AllPublicDeclarationsHaveDocumentation
         public func encoded() -> [String: Any?] {
             [
-                "elementID": elementID,
+                "element": element.encoded(),
                 "eventTypes": eventTypes,
             ]
         }
